<resources>
    <string name="app_name">Unit Converter</string>
    <string name="length">Length</string>
    <string name="area">Area</string>
    <string name="pressure">Pressure</string>
    <string name="power">Power</string>
    <string name="temperature">Temperature</string>
    <string name="weight">Weight</string>
    <string name="speed">Speed</string>
    <string name="volume">Volume</string>
    <string name="about">About</string>
    <string name="version_1_0_0">version 1.0.0</string>
</resources>