<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:orientation="vertical"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:elevation="20dp"
            android:orientation="horizontal"
            android:weightSum="3"
          >

            <LinearLayout
                style="@style/linearLayoutInnerStyle"
                android:background="@drawable/clickeffect"
                >

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/lengthIcon"
                    style="@style/iconstyle"
                    android:src="@drawable/length" />

                <TextView
                    style="@style/textViewStyle"
                    android:text="@string/length" />

            </LinearLayout>


            <LinearLayout
                style="@style/linearLayoutInnerStyle"
                android:background="@drawable/clickeffect">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/areaIcon"
                    style="@style/iconstyle"
                    android:background="@drawable/clickeffect"
                    android:src="@drawable/ic_area_floor_size" />

                <TextView
                    style="@style/textViewStyle"
                    android:text="@string/area" />

            </LinearLayout>

            <LinearLayout
                style="@style/linearLayoutInnerStyle"
                android:background="@drawable/clickeffect">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/volumeIcon"
                    style="@style/iconstyle"
                    android:background="@drawable/clickeffect"
                    android:src="@drawable/ic_cube" />

                <TextView
                    style="@style/textViewStyle"
                    android:text="@string/volume" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:elevation="20dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                style="@style/linearLayoutInnerStyle"
                android:background="@drawable/clickeffect">
                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/speedIcon"
                    style="@style/iconstyle"
                    android:background="@drawable/clickeffect"
                    android:src="@drawable/ic_speedometer" />

                <TextView
                    style="@style/textViewStyle"
                    android:text="@string/speed" />
            </LinearLayout>

            <LinearLayout
                style="@style/linearLayoutInnerStyle"
                android:background="@drawable/clickeffect">
                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/weightIcon"
                    style="@style/iconstyle"
                    android:background="@drawable/clickeffect"
                    android:src="@drawable/ic_weight" />

                <TextView
                    style="@style/textViewStyle"
                    android:text="@string/weight" />
            </LinearLayout>

            <LinearLayout
                style="@style/linearLayoutInnerStyle"
                android:background="@drawable/clickeffect">
                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/temperatureIcon"
                    style="@style/iconstyle"
                    android:background="@drawable/clickeffect"
                    android:src="@drawable/ic_temperature" />

                <TextView
                    style="@style/textViewStyle"
                    android:text="@string/temperature"
                    android:gravity="start"
                    android:layout_width="match_parent"/>
            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:elevation="20dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                style="@style/linearLayoutInnerStyle"
                android:background="@drawable/clickeffect">
                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/powerIcon"
                    style="@style/iconstyle"
                    android:background="@drawable/clickeffect"
                    android:src="@drawable/ic_power" />

                <TextView
                    style="@style/textViewStyle"
                    android:text="@string/power" />

            </LinearLayout>

            <LinearLayout
                style="@style/linearLayoutInnerStyle"
                android:background="@drawable/clickeffect">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/pressureIcon"
                    style="@style/iconstyle"
                    android:background="@drawable/clickeffect"
                    android:src="@drawable/ic_pressure_check" />

                <TextView
                    style="@style/textViewStyle"
                    android:text="@string/pressure" />

            </LinearLayout>

            <com.google.android.material.imageview.ShapeableImageView
                style="@style/iconstyle"
                android:visibility="invisible"

                />


        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>